Date	Added
12/6
	* Fixed global message not working on txt [Wizputer]
	* fixed a server crash in mobinsite [MouseJstr]
	* fixed a server crash in party sharing exp [MouseJstr]
	* fixed a server crash in BS_FINDINGORE [MouseJstr]
        * Updated Chase Walk [celest]
        * Added 'checkoption1' and 'checkoption2' script functions - Refer to
          /npc/sample/npc_testchkoption.txt for similiar examples [celest]
        * Updated maximum level for Guild Skills [celest]

12/5
	* Fixed another crash sending updates to disconnected 
	  clients [MouseJstr]
	* Fixed the range_check again to stop it from crashing 
	  servers [MouseJstr]
	* removed stubbed out unfinished atcommands as per Cameri [MouseJstr]
	* Fixed nullpo's for gcc 2.95 [MouseJstr]
	* Fixed bug in which login-txt was crashing in do_final() due to some free's [MC Cameri]
	* Added nullpo's to all atcommand's functions, phew... [MC Cameri]
	  Note: I point out that MouseJstr has added some @commands that start with char which
	  havent been finished, they are just there but don't do anything.
	* Removed mapbug.txt and corresponding function in map.c (realized it's pointless) [MC Cameri]
        * Added allow_atcommand_when_mute - Change this to set whether muted players
          can use gm commands [celest]
        * Temporarily leaving the changing guild emblems requiring Glory of Guild 
          feature only for TXT until the SQL char-server supports guild skills fully[celest]
        * Modified battle_range again to check if src's type is a player first [celest]
        * Corrected typo in battle_range [celest]
	* Fixed a crash where party chats can be sent to a 
	  partially disconnected player [MouseJstr]

12/4
	* Fixed a crash in clif_send when player disconnects but player
	  object is not fully removed from map [MouseJstr]
	* Fixed a crash associated with NPC_BARRIER [MouseJstr]
	* Renamed flush_fifos_at_exit to flush_fifos [MouseJstr]