@@ -23,6 +23,9 @@ ladminallowip: all
 // This prevents usage of >& log.file
 console: off
 
+// Are login's case sensitive?
+case_sensitive: on
+
 // Gamemaster password, used with the @gm command to obtain GM commands (level of gm set with level_new_gm parameter).
 // NOTICE: You should also change this one.
 gm_pass: gm
